# NNLander

./: .gitignore  CMakeLists.txt  README.md  README_ja.md  build.bat  build.sh  strip_whitespace.py  workshop_requirements_nn_en.txt  workshop_requirements_nn_ja.txt
Common/: DrawUI.h  SimpleNeuralNet.h  Simulation.h  SimulationDisplay.h  Utils.h
Lander01/: CMakeLists.txt  lander01.cpp  main.cpp
Lander02/: CMakeLists.txt  lander02.cpp
Lander03/: CMakeLists.txt  SimpleNeuralNet.h  TrainingTaskRandom.h  lander03.cpp
Lander04/: CMakeLists.txt  SimpleNeuralNet.h  TrainingTaskGA.h  lander04.cpp
Lander05/: CMakeLists.txt  TrainingTaskGA.h  TrainingTaskRES.h  lander05.cpp
slides/: README_slides.md  build_diagrams.sh  build_slides.sh  slides.html  slides.md
slides/src/: genetic_algorithm.mmd  ins_brain_outs.mmd  nn_architecture.mmd  random_training_flow.mmd  simulation_components.mmd
tests/: CMakeLists.txt  FeedForward_benchmark.cpp  FeedForward_test.cpp  fixiture.hpp  fixitures.h  fixitures.hpp  matrix_multiplication_test.cpp  trainingBenchmark04.cpp  trainingBenchmark05.cpp
tests/dp1/: SimpleNeuralNet.h
tests/dp2/: SimpleNeuralNet.h
tests/tc1/: TemplateFeedForward.hpp
